# benchmarks

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  GEMINI.md  Makefile  NEXT_STEPS.md  ONLINE README.md  README.md  TAGGING_CHANGES.md  WORKFLOW_RUN_SUMMARY.md  WORKFLOW_STATUS.md  cleanup_runtimes.py  cleanup_runtimes.sh  django_affirmation_test.txt  django_failed_instances.txt  failed_instances.txt  gt_location.jsonl  pyproject.toml  pyrightconfig.json  run.sh  sitecustomize.py
.github/scripts/: extract_failed_builds.sh
.github/workflows/: _k8s_deploy.yaml  build-commit0-images.yml  build-gaia-eval-image.yml  build-gaia-image.yml  build-gaia-images.yml  build-gaia-mcp-image.yml  build-multiswebench-images.yml  build-openagentsafety-image.yml  build-programbench-images.yml  build-swe-bench-images.yml  build-swebench-images.yml  build-swebenchmultimodal-images.yml  build-swebenchpro-images.yml  build-swegym-images.yml  build-swesmith-images.yml  build-swt-bench-images.yml  build-swtbench-eval-images.yml  build-swtbench-images.yml  experiment-ab-test.yml  experiment-arg-ordering.yml  fix-cache-tag-length.patch  ghcr-retention.yml  openhands-resolver.yml  pr-review-by-openhands.yml  pr-review-evaluation.yml  precommit.yml  programbench.yml  run-eval.yml  tests.yml
.llm_config/: example.json  qwen3.json
.openhands/: TASKS.json
.openhands/microagents/: repo.md
.pr/: gpt-5.4-swebench50-condenser80.md
CAWM/: README.md  __init__.py  awm_swebench_integration.py  clustering.py  compression.py  debug_stage1.py  extractor_openai.py  extractor_v2.py  filter_resolved.py  induction.py  llm_base.py  llm_client.py  main.py  models.py  pipeline.py  rule_base.py  run_cawm_demo.py
CAWM/extractor_v3/: README.md  run_full_pipeline.sh  run_stage3_only.sh  run_stage3_openai.sh  stage0_clean.py  stage1_cluster.py  stage2_extract_workflows.py  stage3_combine_workflows.py  test_extraction.py  test_stage0_only.py
CAWM/extractor_v3_output/: final_workflows.json  final_workflows.txt  final_workflows_unfiltered.json
CAWM/jerry/: __init__.py  clustering.py  compression.py  induction.py  llm_client.py  main.py  models.py  pipeline.py  run_cawm_demo.py
CAWM/workflow/: final_workflows.txt  llm_workflows.json  offline_workflow.txt  rule_workflows.json
benchmarks/: __init__.py  sitecustomize.py
benchmarks/agentic_code_search/: README.md  analyse_tool_calls.py  custom_agent.py  eval_infer.py  eval_infer2.py  localization_finish.py  module_rewards.py  rollouts_swesmith.py  run_infer.py  run_infer.sh  run_infer2.py  run_infer2.sh  run_rollouts.sh
benchmarks/agentserving/: README.md  __init__.py  config.py  modal_vllm.py  results.py  run_infer.py
benchmarks/astra_safety/: README.md  download_dataset.py  evaluate.py  run_infer.py
benchmarks/astrasafety/: README.md  download_dataset.py  eval_infer.py  run_infer.py
benchmarks/commit0/: README.md  build_images.py  config.py  constants.py  eval_infer.py  format_report.py  run_infer.py
benchmarks/evoclaw/: README.md  __init__.py  config.py  run_infer.py
benchmarks/gaia/: Dockerfile.gaia  README.md  README_MCP_FIX.md  build_images.py  config.py  constants.py  eval_infer.py  format_report.py  load_hf_dataset.py  prefetch_gaia.py  run_infer.py
benchmarks/harbor/: eval_infer.py  run_infer.py
benchmarks/hybridgym_depsearch/: run_infer.py
benchmarks/hybridgym_funcgen/: run_infer.py
benchmarks/hybridgym_funclocalize/: run_infer.py
benchmarks/hybridgym_issuelocalize/: run_infer.py
benchmarks/multi_swe_bench/: README.md  __init__.py  build_images.py  config.toml  eval_infer.py  infer.sh  run_infer.py
benchmarks/multiswebench/: README.md  SWE-Gym.md  build_images.py  constants.py  download_dataset.py  eval_infer.py  infer.sh  run_infer.py
benchmarks/openagentsafety/: Dockerfile  README.MD  __init__.py  build_images.py  chat_npc.py  constants.py  eval_infer.py  npc_server.py  run_infer.py  run_infer.sh  start_npc_server.sh
dev_plans/: stage-1-1-models.md  stage-1-2-llm-client.md  stage-1-3-compression.md  stage-1-4-clustering.md  stage-1-5-induction.md  stage-1-6-pipeline.md  stage-1-7-init.md  stage-1-complete.md  stage-1-overall.md  stage-2-complete.md  stage-2-plan.md  stage-3-complete.md  stage-3-openrouter-provider-fix.md  stage-4-complete.md  stage-5-clustering-bugfix.md
do_not_commit_examples/: README_command_tool.md
scripts/: validate_virtual_keys.py
selected_instances/: ghcr-available.txt
swe_bench/: README.md  config.toml  live_utils.py  pyproject.toml  run_infer.py  run_infer_original.py  run_infer_simplified.py  run_localize.py
swe_bench/loc_eval/: loc_evaluator.py
swe_bench/prompts/: swe_claude.j2  swe_default.j2
swe_bench/resource/: mapping.py
swe_bench/scripts/: run_infer.sh
swe_bench/scripts/docker/: get_docker_image_names.py
swe_bench/scripts/eval/: download_gold_patch.py  update_output_with_eval.py
swe_bench/scripts/swtbench/: convert.py
tests/: run_cawm_demo.py  test_acp.py  test_aggregate_results.py  test_async_evaluation.py  test_build_manifest.py  test_buildx_utils.py  test_cawm_models.py  test_cawm_pipeline.py  test_commit0_eval_infer.py  test_commit0_parse_pytest_summary.py  test_commit0_report_summary.py  test_commit0_run_infer.py  test_commit0_test_cmd.py  test_condenser_config.py  test_constants.py  test_cost_cap.py  test_deadlock_detection.py  test_error_output_serialization.py  test_evaluation_proxy_cost.py  test_failure_classifier.py  test_gaia_evaluation_utils.py  test_github_comment_utils.py  test_harbor_compat.py  test_harbor_run_infer.py  test_image_utils.py  test_incomplete_detection.py  test_instance_timeout.py  test_intelligent_routing.py  test_issue_632_critic_drop.py  test_iterative_resume.py  test_keyboard_interrupt.py  test_litellm_proxy.py  test_llm_config.py  test_metrics.py  test_metrics_collection.py  test_metrics_integration.py  test_modal_argparser.py  test_multimodal_phased_build.py  test_multiswebench_constants.py  test_multiswebench_eval.py  (+31 more)
utils/: __init__.py  pyproject.toml  shared.py  shared.py.backup
(+5790 files in other folders)
