[project]
name = "openhands-benchmarks"
version = "0.1.0"
description = "OpenHands Benchmarks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets",
    "jinja2",
    "pandas",
    "toml",
    "tqdm",
    "openhands-tools",
    "unidiff>=0.7.5,<0.8.0",
    "openhands-agent-server",
    "openhands-workspace",
    "modal>=1.1.4",
]

[project.scripts]
validate-cfg = "benchmarks.scripts.validate_cfg:main"
swebench-infer = "benchmarks.swe_bench.run_infer:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmarks"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "psutil>=7.0.0",
    "pyright>=1.1.405",
    "ruff>=0.12.10",
    "pycodestyle>=2.12.0",
]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["benchmarks", "openhands"]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2

[tool.uv.sources]
openhands-sdk = { git = "https://github.com/All-Hands-AI/agent-sdk.git", subdirectory = "openhands/sdk", rev = "feeb519f6e516128a082bc6f072f9ede92d1b603" }
openhands-tools = { git = "https://github.com/All-Hands-AI/agent-sdk.git", subdirectory = "openhands/tools", rev = "feeb519f6e516128a082bc6f072f9ede92d1b603" }
openhands-workspace = { git = "https://github.com/All-Hands-AI/agent-sdk.git", subdirectory = "openhands/workspace", rev = "feeb519f6e516128a082bc6f072f9ede92d1b603" }
openhands-agent-server = { git = "https://github.com/All-Hands-AI/agent-sdk.git", subdirectory = "openhands/agent_server", rev = "feeb519f6e516128a082bc6f072f9ede92d1b603" }
