[project]
name = "openhands-benchmarks"
version = "0.1.0"
description = "OpenHands Benchmarks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets",
    "jinja2",
    "pandas",
    "toml",
    "tqdm",
    "openhands-sdk",
    "openhands-tools",
    "unidiff>=0.7.5,<0.8.0",
    "openhands-agent-server",
    "openhands-workspace",
    "modal>=1.1.4",
]

[project.scripts]
validate-cfg = "benchmarks.scripts.validate_cfg:main"
swebench-infer = "benchmarks.swe_bench.run_infer:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmarks"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "psutil>=7.0.0",
    "pyright>=1.1.405",
    "ruff>=0.12.10",
    "pycodestyle>=2.12.0",
]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["benchmarks", "openhands"]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2

[tool.uv.sources]
openhands-sdk = { workspace = true }
openhands-tools = { workspace = true }
openhands-workspace = { workspace = true }
openhands-agent-server = { workspace = true }

[tool.uv.workspace]
members = [
  "vendor/agent-sdk/openhands-sdk",
  "vendor/agent-sdk/openhands-tools",
  "vendor/agent-sdk/openhands-workspace",
  "vendor/agent-sdk/openhands-agent-server",
]
