[project]
name = "openhands-benchmarks-swe-bench"
version = "0.1.0"
description = "OpenHands integration for SWE-Bench"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets",
    "docker",
    "jinja2>=3.1.3,<4.0.0",
    "litellm>=1.74.3,!=1.64.4,!=1.67.*",
    "numpy",
    "pandas",
    "termcolor",
    "toml",
    "tqdm",
    "unidiff>=0.7.5,<0.8.0",
]
