[project]
name = "openhands_benchmarks_swe_bench"
version = "0.1.0"
description = "OpenHands integration for SWE-Bench"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets",
    "docker",
    "jinja2>=3.1.3,<4.0.0",
    "litellm>=1.74.3,!=1.64.4,!=1.67.*",
    "numpy",
    "pandas",
    "termcolor",
    "toml",
    "tqdm",
    "unidiff>=0.7.5,<0.8.0",
#    "utils-shared @ 'file://../utils/shared'",
]

[tool.uv.sources]
openhands-sdk = { path = "/home/juan-all-hands/v1/agent-sdk/openhands", editable = true }
